# unrealmodding

./: .gitignore  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  crates.drawio
astro_modloader/: Cargo.toml  README.md
astro_modloader/assets/: ActorTemplate.uasset  ActorTemplate.uexp
astro_modloader/src/: assets.rs  astro_integrator.rs  logging.rs  main.rs
astro_modloader/src/handlers/: biome_placement_modifiers.rs  item_list_entries.rs  linked_actor_components.rs  mission_trailheads.rs  mod.rs  persistent_actors.rs
dll_injector/: Cargo.toml
dll_injector/src/: error.rs  lib.rs
github_helpers/: Cargo.toml
github_helpers/src/: lib.rs
unreal_asset/: Cargo.toml  README.md  a.txt  build.rs
unreal_asset/src/: ac7.rs  asset.rs  asset_archive_writer.rs  asset_data.rs  asset_reader.rs  asset_trait.rs  asset_writer.rs  bitvec_ext.rs  crc.rs  cursor_ext.rs  custom_version.rs  engine_version.rs  enums.rs  error.rs  fengineversion.rs  flags.rs  fproperty.rs  lib.rs  macros.rs  object_version.rs  package_file_summary.rs  types.rs  ue4version.rs  unreal_types.rs  uproperty.rs
unreal_asset/src/archive_reader/: asset_archive_writer.rs  mod.rs
unreal_asset/src/asset/: cityhash64_string_map.rs  mod.rs  name_map.rs
unreal_asset/src/containers/: chain.rs  mod.rs  shared_resource.rs
unreal_asset/src/exports/: base_export.rs  class_export.rs  data_table_export.rs  enum_export.rs  function_export.rs  level_export.rs  mod.rs  normal_export.rs  property_export.rs  raw_export.rs  string_table_export.rs  struct_export.rs  unknown_export.rs  user_defined_struct_export.rs  world_export.rs
unreal_asset/src/iostore/: align.rs  container_header.rs  encryption.rs  exports.rs  flags.rs  global.rs  graph_data.rs  mod.rs  name.rs  package_id.rs  package_store_entry.rs
unreal_asset/src/kismet/: mod.rs
unreal_asset/src/properties/: array_property.rs  cloth_lod_property.rs  color_property.rs  date_property.rs  delegate_property.rs  empty_property.rs  enum_property.rs  float_range_property.rs  font_character_property.rs  gameplay_tag_container_property.rs  guid_property.rs  int_property.rs  map_property.rs  material_input_property.rs  mod.rs  multicast_delegate_property.rs  object_property.rs  per_platform_property.rs  raw_struct_property.rs  rich_curve_key_property.rs  sampler_property.rs  set_property.rs  smart_name_property.rs  soft_path_property.rs  str_property.rs  struct_property.rs  unknown_property.rs  vector_property.rs  view_target_blend_property.rs  world_tile_property.rs
unreal_asset/src/reader/: archive_reader.rs  archive_trait.rs  archive_writer.rs  asset_archive_reader.rs  asset_archive_writer.rs  asset_reader.rs  asset_trait.rs  asset_writer.rs  mod.rs  raw_reader.rs  raw_writer.rs
unreal_asset/src/registry/: mod.rs  name_table_reader.rs  name_table_writer.rs
unreal_asset/src/types/: fname.rs  kismet.rs  mod.rs  movie.rs  package_object_index.rs  vector.rs
unreal_asset/src/unversioned/: ancestry.rs  header.rs  mod.rs  usmap_reader.rs  usmap_trait.rs  usmap_writer.rs
unreal_asset/tests/: ac7.rs  cdo_modification.rs  chain.rs  custom_serialization_structs_in_map.rs  data_tables.rs  duplicate_name_map_entries.rs  general.rs  improper_name_map_hashes.rs  indexed_map.rs  iostore.rs  name_editing.rs  shared.rs  ue5.rs  unknown_properties.rs  unversioned.rs  unversioned_properties.rs  user_defined_struct.rs
unreal_asset/tests/general/: astroneer_prebulk.rs  bloodstained.rs  codevein.rs  kismet_unicode.rs  misc426.rs  mod.rs  pseudoregalia.rs  starlit_season.rs  tekken.rs  versioned.rs
unreal_asset/unreal_asset_base/: Cargo.toml
unreal_asset/unreal_asset_base/src/: crc.rs  custom_version.rs  engine_version.rs  enums.rs  error.rs  flags.rs  import.rs  lib.rs  object_version.rs  uproperty.rs
unreal_asset/unreal_asset_exports/: Cargo.toml
unreal_asset/unreal_asset_exports/src/: base_export.rs  class_export.rs  data_table_export.rs  enum_export.rs  function_export.rs  (+9 more)
unreal_asset/unreal_asset_kismet/: Cargo.toml
unreal_asset/unreal_asset_proc_macro/: Cargo.toml
unreal_asset/unreal_asset_properties/: Cargo.toml
unreal_asset/unreal_asset_registry/: Cargo.toml
unreal_cpp_bootstrapper/: Cargo.toml  build.rs
unreal_cpp_bootstrapper/src/: config.rs  error.rs  lib.rs
unreal_cpp_loader/: Cargo.toml  build.rs
unreal_cpp_loader/src/: config.rs  lib.rs
unreal_helpers/: Cargo.toml  README.md
unreal_helpers/src/: bitvec_ext.rs  error.rs  guid.rs  lib.rs  path.rs  read_ext.rs  write_ext.rs
unreal_helpers/tests/: bitvec.rs  bool.rs  fstring.rs  path.rs
unreal_mod_integrator/: Cargo.toml  README.md  build.rs
unreal_mod_integrator/assets/: metadata.json
unreal_mod_integrator/examples/: integration.rs
unreal_mod_integrator/src/: assets.rs  error.rs  helpers.rs  lib.rs  macros.rs
unreal_mod_manager/: Cargo.toml  README.md
unreal_mod_manager/src/: app.rs  background_work.rs  config.rs  error.rs  game_mod.rs  game_path_helpers.rs  lib.rs  mod_config.rs  update_info.rs
unreal_mod_metadata/: Cargo.toml  README.md
unreal_mod_metadata/src/: lib.rs  v2.rs
unreal_modintegrator/: Cargo.toml  README.md  build.rs
unreal_modintegrator/assets/: IntegratorAPI.uasset  IntegratorStatics.uasset  IntegratorStatics_BP.uasset  ListOfMods.uasset  Mod.uasset  ModMismatchWidget.uasset  ServerModComponent.uasset  SyncMode.uasset
unreal_modintegrator/examples/: integration.rs
unreal_modintegrator/src/: assets.rs  error.rs  helpers.rs  lib.rs  metadata.rs
unreal_modloader/: Cargo.toml  README.md
unreal_modloader/src/: app.rs  background_work.rs  config.rs  determine_paths.rs  error.rs  game_mod.rs  game_path_helpers.rs  game_platform_managers.rs  lib.rs  mod_config.rs  modconfig.rs  profile.rs  version.rs
unreal_pak/: Cargo.toml  README.md
unreal_pak/src/: buf_ext.rs  compression.rs  entry.rs  error.rs  header.rs  index.rs  lib.rs  pakfile.rs  pakmemory.rs  pakreader.rs  pakversion.rs  pakwriter.rs
unreal_pak/testfiles/: 000-TestPak-cus-NoC_P.pak  000-TestPak-off-NoC_P.pak
unreal_pak_cli/: Cargo.toml  README.md
unreal_pak_cli/src/: main.rs
(+358 files in other folders)
