[workspace]
members = [
    "dll_injector",
    "github_helpers",
    "unreal_asset",
    "unreal_asset/unreal_asset_proc_macro",
    "unreal_cpp_bootstrapper",
    "unreal_helpers",
    "unreal_mod_integrator",
    "unreal_mod_manager",
    "unreal_mod_metadata",
    "unreal_pak",
    "unreal_pak_cli",
]

[workspace.package]
version = "0.1.15"
authors = ["AstroTechies, localcc, konsti219"]
license = "MIT"
description = "Tools for making and loading Unreal Engine Mods."
homepage = "https://github.com/AstroTechies/unrealmodding"

[workspace.dependencies]
dll_injector = { path = "./dll_injector", version = "0.1.15" }
github_helpers = { path = "./github_helpers", version = "0.1.15" }
unreal_asset = { path = "./unreal_asset", version = "0.1.15" }
unreal_cpp_bootstrapper = { path = "./unreal_cpp_bootstrapper", version = "0.1.15" }
unreal_asset_proc_macro = { path = "./unreal_asset/unreal_asset_proc_macro", version = "0.1.15" }
unreal_helpers = { path = "./unreal_helpers", version = "0.1.15" }
unreal_mod_integrator = { path = "./unreal_mod_integrator", version = "0.1.15" }
unreal_mod_metadata = { path = "./unreal_mod_metadata", version = "0.1.15" }
unreal_pak = { path = "./unreal_pak", version = "0.1.15" }

bitvec = "1.0.1"
byteorder = "1.4.3"
lazy_static = "1.4.0"
log = "0.4.17"
num_enum = "0.5.11"
regex = "1.7.3"
reqwest = { version = "0.11.15", features = ["blocking", "json"] }
semver = "1.0.17"
serde_json = "1.0.94"
serde = { version = "1.0.158", features = ["derive"] }

[patch.crates-io]
steamy-vdf = { git = "https://github.com/icewind1991/steamy" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
