[workspace]
members = [
    "dll_injector",
    "github_helpers",
    "unreal_asset",
    "unreal_asset/unreal_asset_base",
    "unreal_asset/unreal_asset_properties",
    "unreal_asset/unreal_asset_kismet",
    "unreal_asset/unreal_asset_exports",
    "unreal_asset/unreal_asset_registry",
    "unreal_asset/unreal_asset_proc_macro",
    "unreal_cpp_bootstrapper",
    "unreal_helpers",
    "unreal_mod_integrator",
    "unreal_mod_manager",
    "unreal_mod_metadata",
    "unreal_pak",
    "unreal_pak_cli",
]

[workspace.package]
version = "0.1.16"
authors = ["AstroTechies", "localcc", "konsti219"]
license = "MIT"
description = "Tools for making and loading Unreal Engine Mods."
homepage = "https://github.com/AstroTechies/unrealmodding"

[workspace.dependencies]
dll_injector = { path = "./dll_injector", version = "0.1.16" }
github_helpers = { path = "./github_helpers", version = "0.1.16" }
unreal_asset = { path = "./unreal_asset", version = "0.1.16" }
unreal_cpp_bootstrapper = { path = "./unreal_cpp_bootstrapper", version = "0.1.16" }
unreal_asset_base = { path = "./unreal_asset/unreal_asset_base", version = "0.1.16" }
unreal_asset_properties = { path = "./unreal_asset/unreal_asset_properties", version = "0.1.16" }
unreal_asset_kismet = { path = "./unreal_asset/unreal_asset_kismet", version = "0.1.16" }
unreal_asset_exports = { path = "./unreal_asset/unreal_asset_exports", version = "0.1.16" }
unreal_asset_registry = { path = "./unreal_asset/unreal_asset_registry", version = "0.1.16" }
unreal_asset_proc_macro = { path = "./unreal_asset/unreal_asset_proc_macro", version = "0.1.16" }
unreal_helpers = { path = "./unreal_helpers", version = "0.1.16" }
unreal_mod_integrator = { path = "./unreal_mod_integrator", version = "0.1.16" }
unreal_mod_metadata = { path = "./unreal_mod_metadata", version = "0.1.16" }
unreal_pak = { path = "./unreal_pak", version = "0.1.16" }

bitflags = "2.4.0"
bitvec = "1.0.1"
byteorder = "1.4.3"
enum_dispatch = "0.3.12"
lazy_static = "1.4.0"
log = "0.4.20"
num_enum = "0.6.1"
ordered-float = "3.7.0"
regex = "1.9.3"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
semver = "1.0.18"
serde_json = "1.0.104"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.44"

[patch.crates-io]
steamy-vdf = { git = "https://github.com/icewind1991/steamy" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
