[package]
name = "astro_modloader"
version = "0.1.0"
edition = "2021"

[dependencies]
unreal_modloader = { version = "0.1.0", path = "../unreal_modloader" }
unreal_modintegrator = { version = "0.1.0", path = "../unreal_modintegrator", features=["bulk_data"] }
unreal_asset = { version = "0.1.0", path = "../unreal_asset" }
unreal_pak = { version = "0.1.0", path = "../unreal_pak" }
serde_json = "1.0.81"
log = "0.4.17"
colored = "2.0.0"
lazy_static = "1.4.0"
regex = "1.5.6"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }