[package]
name = "dll_injector"
version.workspace = true
authors.workspace = true
description.workspace = true
edition = "2021"

[dependencies]
windows = { version = "0.44.0", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices"
    ] }
