[package]
name = "dll_injector"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/AstroTechies/unrealmodding/tree/main/dll_injector"
documentation = "https://docs.rs/dll_injector"
edition = "2021"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.44.0", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
] }
