[package]
name = "github_helpers"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
