[package]
name = "unreal_asset"
version.workspace = true
authors.workspace = true
description = "Unreal Engine 4/5 game asset serialization library."
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/unreal_asset"
edition = "2021"
exclude = ["tests/*"]

[dependencies]
unreal_helpers.workspace = true
unreal_helpers.features = ["bitvec", "guid", "path", "read_write"]
unreal_asset_proc_macro.workspace = true

bitflags = "1.3.2"
bitvec.workspace = true
byteorder.workspace = true
enum_dispatch = "0.3.8"
brotli = "3.3.4"
zstd = "0.12.3+zstd.1.5.2"
lazy_static.workspace = true
num_enum.workspace = true
ordered-float = "3.4.0"
# containers/indexed_map
slab = "0.4.7"
rustc-hash = "1.1.0"
thiserror = "1.0.40"
naive-cityhash = "0.2.0"

[features]
oodle = []
threading = []
