[package]
name = "unreal_asset"
version.workspace = true
authors.workspace = true
description = "Unreal Engine 4/5 game asset serialization library."
license.workspace = true
repository.workspace = true
homepage = "https://github.com/AstroTechies/unrealmodding/tree/main/unreal_asset"
documentation = "https://docs.rs/unreal_asset"
edition = "2021"
exclude = ["tests/*"]

[dependencies]
unreal_asset_base.workspace = true
unreal_asset_properties.workspace = true
unreal_asset_kismet.workspace = true
unreal_asset_exports.workspace = true
unreal_asset_registry.workspace = true
unreal_asset_proc_macro.workspace = true

unreal_helpers.workspace = true
unreal_helpers.features = ["bitvec", "guid", "path", "read_write"]

byteorder.workspace = true

[features]
oodle = []
threading = []
