[package]
name = "unreal_cpp_bootstrapper"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/AstroTechies/unrealmodding/tree/main/unreal_cpp_bootstrapper"
documentation = "https://docs.rs/unreal_cpp_bootstrapper"
edition = "2021"

[dependencies]
unreal_helpers.workspace = true
unreal_mod_metadata.workspace = true
unreal_pak.workspace = true

lazy_static.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true

[build-dependencies]
cmake = "0.1.49"
git2 = "0.16.1"
github_helpers.workspace = true

[features]
gui = []
