[package]
name = "unreal_mod_metadata"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/AstroTechies/unrealmodding/tree/main/unreal_mod_metadata"
documentation = "https://docs.rs/unreal_mod_metadata"
edition = "2021"

[dependencies]
semver.workspace = true
serde_json.workspace = true
serde.workspace = true
