[package]
name = "unreal_modintegrator"
version = "0.1.0"
edition = "2021"

[features]
bulk_data = []

[dependencies]
unreal_asset = { version = "0.1.0", path = "../unreal_asset" }
unreal_pak = { version = "0.1.0", path = "../unreal_pak" }
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
