[package]
name = "unreal_modintegrator"
version = "0.1.4"
edition = "2021"

[features]
no_bulk_data = []

# Ue versions
# If you want support for other ue versions, you can make a pull request with the support added,
# or make an issue asking for a specific ue version to be supported.
ue4_23 = []

[dependencies]
unreal_asset = { version = "0.1.0", path = "../unreal_asset" }
unreal_pak = { version = "0.1.0", path = "../unreal_pak" }
unreal_modmetadata = { version = "0.1.1", path = "../unreal_modmetadata" }
lazy_static = "1.4.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
regex = "1.6.0"
log = "0.4.17"

[build-dependencies]
fs_extra = "1.2.0"
