[package]
name = "unreal_modloader"
version = "0.1.9"
edition = "2021"

[features]
no_bulk_data = ["unreal_modintegrator/no_bulk_data"]

# Ue versions
# If you want support for other ue versions, you can make a pull request with the support added,
# or make an issue asking for a specific ue version to be supported.
ue4_23 = ["unreal_modintegrator/ue4_23"]

[dependencies]
unreal_modintegrator = { version = "0.1.5", path = "../unreal_modintegrator" }
unreal_asset = { version = "0.1.0", path = "../unreal_asset" }
unreal_pak = { version = "0.1.0", path = "../unreal_pak" }
unreal_modmetadata = { version = "0.1.0", path = "../unreal_modmetadata" }

directories = "4.0.1"
eframe = "0.19.0"
egui_extras = "0.19.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
log = "0.4.17"
steamlocate = "1.0.1"
reqwest = { version = "0.11.11", features = ["blocking"] }
regex = "1.6.0"
lazy_static = "1.4.0"
open = "3.0.2"
parking_lot = "0.12.1"
semver = "1.0.13"
petgraph = "0.6.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
