[package]
name = "unreal_modloader"
version.workspace = true
authors.workspace = true
description.workspace = true
edition = "2021"

[features]
no_bulk_data = ["unreal_modintegrator/no_bulk_data"]

# Ue versions
# If you want support for other ue versions, you can make a pull request with the support added,
# or make an issue asking for a specific ue version to be supported.
ue4_23 = ["unreal_modintegrator/ue4_23"]

default = ["ue4_23"]

[dependencies]
unreal_modintegrator.workspace = true
unreal_asset.workspace = true
unreal_pak.workspace = true
unreal_modmetadata.workspace = true

directories = "4.0.1"
eframe = "0.19.0"
egui_extras = "0.19.0"
lazy_static.workspace = true
log.workspace = true
open = "3.2.0"
parking_lot = "0.12.1"
petgraph = "0.6.2"
regex.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
steamlocate = "1.1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
