[package]
name = "unreal_modloader"
version.workspace = true
authors.workspace = true
description.workspace = true
edition = "2021"

[features]
no_bulk_data = ["unreal_modintegrator/no_bulk_data"]
cpp_loader = ["dep:unreal_cpp_bootstrapper", "dep:tempfile", "dep:dll_injector"]
cpp_loader_gui = ["cpp_loader", "unreal_cpp_bootstrapper?/gui"]
# Ue versions
# If you want support for other ue versions, you can make a pull request with the support added,
# or make an issue asking for a specific ue version to be supported.
ue4_23 = ["unreal_modintegrator/ue4_23"]

default = ["ue4_23"]

[dependencies]
unreal_modintegrator.workspace = true
unreal_asset.workspace = true
unreal_pak.workspace = true
unreal_modmetadata.workspace = true
unreal_cpp_bootstrapper.workspace = true
unreal_cpp_bootstrapper.optional = true
dll_injector.workspace = true
dll_injector.optional = true

directories = "4.0.1"
eframe = "0.20.1"
egui_extras = "0.20.0"
lazy_static.workspace = true
log.workspace = true
open = "3.2.0"
parking_lot = "0.12.1"
petgraph = "0.6.2"
regex.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
steamlocate = "1.1.0"
tempfile = { version = "3.3.0", optional=true }

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
