[package]
name = "unreal_pak"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/AstroTechies/unrealmodding/tree/main/unreal_pak"
documentation = "https://docs.rs/unreal_pak"
edition = "2021"

[dependencies]
unreal_helpers.workspace = true
unreal_helpers.features = ["read_write"]

bitvec.workspace = true
byteorder.workspace = true
flate2 = { version = "1.0.25", features = ["zlib"], default-features = false }
rand = "0.8.5"
sha-1 = "0.10.1"
