[package]
name = "unreal_pak_cli"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/AstroTechies/unrealmodding/tree/main/unreal_pak_cli"
documentation = "https://docs.rs/unreal_pak_cli"
edition = "2021"

[dependencies]
unreal_pak.workspace = true

clap = { version = "4.1.13", features = ["derive"] }
path-absolutize = "3.0.14"
walkdir = "2.3.3"
