[package]
name = "unreal_asset_proc_macro"
version.workspace = true
authors.workspace = true
description = "Proc macro implementations for unreal_asset"
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/unreal_asset"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.15"
