[package]
name = "unreal_asset_properties"
version.workspace = true
authors.workspace = true
description = "Properties implementations for unreal_asset"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/AstroTechies/unrealmodding/tree/main/unreal_asset/unreal_asset_properties"
documentation = "https://docs.rs/unreal_asset_properties"
edition = "2021"

[dependencies]
unreal_asset_base.workspace = true
unreal_asset_proc_macro.workspace = true

unreal_helpers.workspace = true
unreal_helpers.features = ["bitvec", "guid", "path", "read_write"]

bitvec.workspace = true
byteorder.workspace = true
enum_dispatch.workspace = true
num_enum.workspace = true
ordered-float.workspace = true
