[package]
name = "unreal_asset_registry"
version.workspace = true
authors.workspace = true
description = "Unreal Engine 4/5 game asset serialization library."
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/unreal_asset_registry"
edition = "2021"

[dependencies]
unreal_asset_base.workspace = true
unreal_asset_properties.workspace = true
unreal_asset_exports.workspace = true
unreal_helpers.workspace = true

byteorder.workspace = true
num_enum.workspace = true
bitvec.workspace = true
lazy_static.workspace = true
