[package]
name = "unreal_asset_registry"
version.workspace = true
authors.workspace = true
description = "Asset registry implementations for unreal_asset"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/AstroTechies/unrealmodding/tree/main/unreal_asset/unreal_asset_registry"
documentation = "https://docs.rs/unreal_asset_registry"
edition = "2021"

[dependencies]
unreal_asset_base.workspace = true
unreal_asset_properties.workspace = true
unreal_asset_exports.workspace = true

unreal_helpers.workspace = true
unreal_helpers.features = ["bitvec", "guid"]

bitvec.workspace = true
byteorder.workspace = true
lazy_static.workspace = true
num_enum.workspace = true
